src/scss/home.scss
@import "constants";
@import "mixins";
@import "~slick-carousel/slick/slick";


.shop-notice {
  width: 100%;
  background: #000;
  padding: .3rem .75rem .5rem;
  text-align: center;
  border-top: 1px solid #2c2c2d;

  a {
    color: #fff;
    font-size: 1rem;
    text-decoration: none;
  }
}


// HOME 
#home-grid {
  width: 100%;
  height: $home_banner_size;
}


.home-info{
  position: absolute;
  top: 50%;
  left: 10%;

  @media (max-width:1280px){
    width: 100%;
    height: 100%;
    top: 0%;
    left: 0%;
    display: flex;
    justify-content: end;
    align-items: center;
    flex-direction: column;
    padding-bottom: 50px;
  }
}

.home-title{
  font-size: 2rem;
  font-weight: 500;
  margin-bottom: 0.3rem;
  text-align: start;
  color: white;

  @media (max-width: 1280px) {
    font-size: 2rem;
  }

  @media (max-width: 640px) {
    font-size: 1.8rem;
    text-align: center;
    display: none;
  }
}

.home-title--bold{
  font-weight: 900;

  @media (max-width: 640px) {
    font-size: 1.2rem;
    text-align: center;
    display: block;
  }
}

.home-grid__picture{
  height: $home_banner_size!important;
  width: 100%;
  object-fit: cover;
}

.home-title__button{
  display: block;
  @include btn(#000, #ededed, #ddd);
  margin-top: 2rem;


  @media (max-width: 1280px) {
    margin-top: 1rem;
  }

}

// FEATURED

.top-products{
  padding: 20px 10%;
  padding-top: 50px;

  @media (max-width: 1280px) {
    padding: 20px 5%;
  }
}

.top-products__title{
  font-size: 1.5rem;
  font-weight: 900;
  padding: 15px 0;
}

.top-products-container{
  display: flex;
  justify-content: space-around;
  gap: 100px;

  // @media (max-width: 1280px) {
  //   flex-direction: column;
  //   gap: 20px
  // }
}


.top-products-container__item{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.product-image{
  display: flex;
  align-items: center;
  justify-content: center;
}

.product-image > img{
  width: 280px;
}


.product-details{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.product-title{
  font-size: 1rem!important;
  font-weight: 300!important;
  margin-bottom: 0.3rem;
  text-align: center;
  width: 20rem;

  @media (max-width: 1280px) {
    width: 10rem;
  }
}

.product-price{
  font-size: 0.8rem!important;
  font-weight: 500;
  margin-bottom: 0.3rem;
  text-align: center;
}

// CATEGORIES
.categories{
  font-family: 'Helvetica Neue', sans-serif;
  padding: 20px 10%;

  @media (max-width: 1280px) {
    padding: 20px 5%;
  }
}

.categories-additionals{
  display: flex;
  justify-content: space-between;
  gap: 50px;
  padding: 10px 0;
  @media (max-width: 1280px) {
    flex-direction: column;    
    gap:20px
  }
}

.categories-additionals__button{
  flex-grow: 1;
  padding: 20px 40px;
  border-radius: 35px;
  border: none;
  margin: 0;
  font-size:3rem; 
  color: rgba(255, 255, 255, 0.5);
  font-weight: 700;
  transition: 0.3s;
  filter: grayscale(100%);

  @media (max-width: 1280px) {
    font-size: 1.5rem;
    padding: 40px 40px;
  }
}

.categories-additionals__button:hover{
  color: rgba(255, 255, 255, 1);
  transition: 0.3s;
  filter: grayscale(0%);
  @media (max-width: 1280px) {
    padding: 150px 40px;
  }
}

.categories-additionals__button--ofertas{
  background: url(../assets/OFERTAS_BUTTON_HOME.png) no-repeat center;
  background-size: cover;

}

.categories-additionals__button--packs{
  background: url(../assets/PACKS_BUTTON_HOME.png) no-repeat center;
  background-size: cover;
}

.categories-generals{
  display: flex;
  justify-content: space-between;
  gap: 30px;

  padding: 10px 0;
  @media (max-width: 1280px) {
    flex-direction: column;    
    gap:20px
  }
}

.categories-generals__button{
  flex-grow: 1;
  padding: 251px 20px;
  border-radius: 35px;
  border: none;
  margin: 0;
  font-size:3rem; 
  color: rgba(255, 255, 255, 0.5);
  font-weight: 700;
  transition: 0.2s;
  filter: grayscale(100%);

  @media (max-width: 1280px) {
    padding: 40px 40px;
    font-size: 1.5rem;
  }

}

.categories-generals__button:hover{
  color: rgba(255, 255, 255, 1);
  transition: 0.2s;
  filter: grayscale(0%);
  @media (max-width: 1280px) {
    padding: 150px 40px;
    font-size: 1.5rem;
  }
}

.categories-generals__button--headphones{
  background: url(../assets/HP_CATEGORY_CUT.jpg) no-repeat center;
  background-size: cover;
}

.categories-generals__button--tw{
  background: url(../assets/TW_CATEGORY_CUT.jpg) no-repeat center;
  background-size: cover;
}


.categories-generals__button--bluetooth{
  background: url(../assets/BT_CATEGORY_CUT.jpg) no-repeat center;
  background-size: cover;
}




#fixedbutton {
  position: fixed;
  bottom: 30px;
  right: 30px; 
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 1000;
  text-decoration: none;

  @media (max-width: 1280px) {
    bottom: 10px;
    right: 10px; 
  }
}

.fixedbutton__img{
  width: 50px;
  height: auto;
  z-index: 1000;

  @media (max-width: 1280px) {
    width: 30px;
  }
}

.fixedbutton__text{
  width: 150px;
  font-style: 'Helvetica Neue', sans-serif;
  padding: 3px 5px;
  padding-left: 20px;
  margin-left: -20px;
  border-radius: 10px;
  font-size: 0.8rem;
  font-weight: 800;
  text-align: left;
  color: black;
  background-color: rgba(255, 255, 255, 0.65);

  @media (max-width: 1280px) {
    font-size: 0.5rem;
    width: 115px;
  }
}




.social{
  font-family: 'Helvetica Neue', sans-serif;
  padding: 20px 10%;

  @media (max-width: 1280px) {
    padding: 20px 5%;
  }
}

// SLICK STYLE
.slick-slider{
  @media (max-width: 1280px) {
    // display: flex;
    // align-items: center;
    // gap: 10px;
  }
}

.slick-dots {
  // position: absolute;
  // bottom: 4rem;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;

  li {
    list-style: none;
    margin: 0 .25rem;

    button {
      display: block;
      width: 1rem;
      height: 1rem;
      background: rgb(58, 58, 58);
      border-radius: 100%;
      font-size: 0;
      border: none;
      transition: .2s ease-in;
    }

    &.slick-active {
      button {
        width: 1.25rem;
        height: 1.25rem;
      }
    }
  }
}


// ENTERATE SECTION

.enterate{
  font-family: 'Helvetica Neue', sans-serif;
  padding: 20px 10%;

  @media (max-width: 1280px) {
    padding: 20px 5%;
  }
}

.enterate__container{
  display: flex;
  justify-content: space-between;
  gap: 50px;
  padding: 10px 0;
  @media (max-width: 1280px) {
    flex-direction: column;    
    gap:20px
  }
}

.enterate__container__item{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.enterate__container__info{
  max-width: 300px;
}

.enterate__container__item__title{
  text-transform: uppercase;
  font-weight: 800;
  font-size: 1.5rem;
}

.enterate__container__item__subtitle{
  font-weight: 300;
  margin-bottom: 0.3rem;
}
.enterate__container__item__button{
  @include btn(#fff, #383838, #2c2c2d);
}

.enterate__container__item__picture__image{
  width: 300px;
  height: auto;
  object-fit: cover;
}

//  OLDS

#gallery {
  display: flex;
  margin-bottom: -3px;
  @media (max-width: 768px) {
    flex-direction: column;
    padding: 20px 20px 40px 20px;
  }

  .media {
    position: relative;

    picture {
      display: flex;

      img {
        max-width: 100%;
        max-height: 100%;
      }
    }

    &:hover {
      .hover {
        opacity: 1;
      }
    }

    .hover {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: calc(100% - 3px);
      opacity: 0;
      transition: .5s;
      z-index: 1;
    }
  }


}

.full-width {
  width: 100%;
  margin-bottom: -3px;

  img {
    width: 100%;
    height: auto;
  }

  @media (max-width: 768px) {
    padding: 20px 20px 0px 20px;
  }
}

